# Robotics_Assignment_PaceRobotics

./: .gitignore  README.md  media
install/: local_setup.sh  setup.sh
install/robot_simulation/lib/robot_simulation/: obstacle_avoidance
install/robot_simulation/share/robot_simulation/: package.sh  package.xml
install/robot_simulation/share/robot_simulation/urdf/: differential_robot.urdf
log/: latest_build
src/robot_simulation/: setup.py
src/robot_simulation/launch/: Untitled-1.txt  simulation.launch.py
src/robot_simulation/urdf/: differential_robot1.urdf  simple_robot.urdf
src/robot_simulation/worlds/: simple_obstacles.world  world_main.world
